Fix (forms) Multi select wrap fix

--- a/app/styles/uxs/_include.vendor.scss
+++ b/app/styles/uxs/_include.vendor.scss
@@ -115,7 +115,7 @@ $ember-power-select-multiple-option-line-height: ($baseline*1.5);
 .ember-power-select-multiple-options {
   min-height   : $ember-power-select-multiple-option-line-height;
   margin-bottom: 0!important;
-  padding      : 0 rem-size(1px);
+  padding      : rs(0.0625);
 }
 
 .ember-power-select-trigger-multiple-input {
@@ -126,7 +126,7 @@ $ember-power-select-multiple-option-line-height: ($baseline*1.5);
 .ember-power-select-multiple-option {
   border     : none;
   line-height: rs(1.25);
-  margin     : rs(0.125) rs(0.0625); //rem-size(2px) rem-size(1px);
+  margin     : rs(0.0625); //rem-size(2px) rem-size(1px);
   padding    : 0 rs(.5) 0 0;
 }
 
